fix css and layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ comments: true
 ---
 <h2 class="post-title">{{ page.title }}</h2>
 
-<div class="content">
+<div class="post-content">
 <div class="post-categories">
     {% if post %}
       {% assign categories = post.categories %}
